--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,186 @@
-<html><body>teste</body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>KeepIt Safe</title>
+<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+
+<script src="jquery/jquery-1.7.2.min.js"></script>
+<script src="bootstrap/js/bootstrap.js"></script>
+<script src="bootstrap/js/bootstrap-modal.js"></script>
+<script>
+	
+</script>
+</head>
+<body>
+	<div class="navbar">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="brand" href="#">KeepIt Safe</a>
+				<ul class="nav">
+					<li class="active"><a href="#">My Keeps</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="span6">
+				<h2>Security Keep</h2>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Secret</th>
+							<th>Description</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><a href="#">Syslog Pass</a></td>
+							<td>The syslog password</td>
+						</tr>
+						<tr>
+							<td>AD</td>
+							<td>The Active Directory sync password</td>
+						</tr>
+					</tbody>
+				</table>
+				<a data-toggle="modal" class="btn btn-primary" href="#new-secret">New Modal</a>
+				<hr>
+
+				<h2>Security Keep Read Only</h2>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Secret</th>
+							<th>Description</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>SyslogD</td>
+							<td>The syslog password</td>
+						</tr>
+						<tr>
+							<td>AD</td>
+							<td>The Active Directory sync password</td>
+						</tr>
+					</tbody>
+				</table>
+				<a href="#" class="btn disabled">New</a>
+				<hr>
+				<h2>Security Keep</h2>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Secret</th>
+							<th>Description</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>SyslogD</td>
+							<td>The syslog password</td>
+						</tr>
+						<tr>
+							<td>AD</td>
+							<td>The Active Directory sync password</td>
+						</tr>
+					</tbody>
+				</table>
+				<a href="#" class="btn btn-primary">New</a>
+				<hr>
+			</div>
+			<div class="span6">
+				<h2>Network Keep</h2>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Secret</th>
+							<th>Description</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>SyslogD</td>
+							<td>The syslog password</td>
+						</tr>
+						<tr>
+							<td>AD</td>
+							<td>The Active Directory sync password</td>
+						</tr>
+						<tr>
+							<td>ADAM</td>
+							<td>The Active Directory AP sync password</td>
+						</tr>
+					</tbody>
+				</table>
+				<a href="#" class="btn btn-primary">New</a>
+				<hr>
+				<h2>Security Keep</h2>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Secret</th>
+							<th>Description</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>SyslogD</td>
+							<td>The syslog password</td>
+						</tr>
+						<tr>
+							<td>AD</td>
+							<td>The Active Directory sync password</td>
+						</tr>
+					</tbody>
+				</table>
+				<a href="#" class="btn btn-primary">New</a>
+				<hr>
+				<h2>CSIRT</h2>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>Secret</th>
+							<th>Description</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>SyslogD</td>
+							<td>The syslog password</td>
+						</tr>
+						<tr>
+							<td>AD</td>
+							<td>The Active Directory sync password</td>
+						</tr>
+					</tbody>
+				</table>
+				<a href="#" class="btn btn-primary">New</a>
+				<hr>
+			</div>
+		</div>
+		<div class="row">
+			<div class="span12">http://www.fcrp.info/keepitsafe</div>
+		</div>
+	</div>
+
+	<div class="modal hide" id="new-secret">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal">×</button>
+			<h3>Modal header</h3>
+		</div>
+		<div class="modal-body">
+			<p>One fine body…</p>
+		</div>
+		<div class="modal-footer">
+			<a href="#" class="btn" data-dismiss="modal">Close</a> <a href="#"
+				class="btn btn-primary">Save changes</a>
+		</div>
+	</div>
+</body>
+</html>
