new secret handle #10

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -73,8 +73,8 @@
 				<div class="control-group">
 					<label class="control-label" for="secret-name">Secret</label>
 					<div class="controls">
-						<input type="hidden" id="secret-id">
-						<input type="text" id="secret-name">
+						<input type="hidden" id="secret-id"> <input type="hidden"
+							id="secret-keep-id"> <input type="text" id="secret-name">
 					</div>
 				</div>
 				<div class="control-group">
@@ -103,8 +103,8 @@
 			<a href="#" class="btn" data-dismiss="modal">Close</a> <a href="#"
 				class="btn btn-primary">Copy Login</a><a href="#"
 				class="btn btn-primary">Copy Password</a><a href="#"
-				class="btn btn-success" id="btn-save-secret">Save changes</a><a href="#"
-				class="btn btn-danger">Delete</a>
+				class="btn btn-success" id="btn-save-secret">Save changes</a><a
+				href="#" class="btn btn-danger">Delete</a>
 		</div>
 	</div>
 
