Remove broken class dep

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,51 +17,23 @@
 	<div class="navbar">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="#">KeepIt Safe</a>
-				<ul class="nav">
-					<li class="active"><a href="#">My Keeps</a></li>
-					<li><a href="#">New Keep</a></li>
-				</ul>
+				<a class="brand" href="#">Keep It Safe</a>
 			</div>
 		</div>
 	</div>
 
-	<div class="container" id="container">
+	<div class="container">
 		<div class="row">
 			<div class="span6" id="keep-container-1"></div>
 			<div class="span6" id="keep-container-2"></div>
 		</div>
 		<div class="row">
+			<hr>
+			<a class="btn btn-primary">New Keep</a>
+			<hr>
 			<div class="span12">http://www.fcrp.info/keepitsafe</div>
 		</div>
 	</div>
-
-
-	<!-- 
-	 <h2>Security Keep</h2>
-				<table class="table table-bordered">
-					<thead>
-						<tr>
-							<th>Secret</th>
-							<th>Description</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td><a href="#">Syslog Pass</a></td>
-							<td>The syslog password</td>
-						</tr>
-						<tr>
-							<td>AD</td>
-							<td>The Active Directory sync password</td>
-						</tr>
-					</tbody>
-				</table>
-				<a data-toggle="modal" class="btn btn-primary" href="#new-secret">New
-					Modal</a>
-				<hr>
-	
-	 -->
 
 	<div class="modal hide" id="secret-dialog">
 		<div class="modal-header">
